--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 </head>
 <body>
     <h1>Hello</h1>
-
-<script src="script.js">
+    git remote add origin https://github.com/DanyilShcheblykin/git-course.git
+<script src="script.js ">
   
 </script>
 </body>
